# learn_openGL

./: CMakeLists.txt
apps/: CMakeLists.txt  app.cpp
docs/: CMakeLists.txt
include/: glad.h
include/QS_OpenGL_lib/: qs_ogl_lib.h  qs_ogl_lib_shader.h
shaders/: fragment_shader2.glsl  fragment_shader3.glsl  fragment_shader4.glsl  vertex_shader1.glsl  vertex_shaderwc1.glsl
src/: CMakeLists.txt  glad.c
src/QS_OpenGL_lib/: CMakeLists.txt  qs_ogl_lib.cpp  qs_ogl_lib_shader.cpp
